# algorithms

./: .gitignore  CMakeLists.txt  LICENSE  README.md  longest_increasing_subsequence.cpp
data/: flip31.txt  flip4.txt  flip5.txt  flip6.txt  min_shop.txt
include/: bellman_ford.h  binaty_color_graph.h  bribe_prisoners.h  conscription.h  crazy_rows.h  dijkstra.h  expedition.h  fast_pow.h  kruskal.h  longest_common_subsequence.h  prime.h
include/advanced/: color_stone.h  gauss_jordan.h  inclusion_exclusion_principle.h  k-anonymous_sequence.h  largest_rectangle_in_histogram.h  linear_congruence.h  moebius.h  slice_min.h
include/base/: bellman_ford.h  bribe_prisoners.h  conscription.h  crazy_rows.h  dijkstra.h  fast_pow.h  floyd_warshall.h  gcd.h  kruskal.h  longest_increasing_subsequence.h  map_edge.h  minimum_scalar_product.h  mod.h  parentheses_balance.h  prime.h  print_utilitys.h  sieve.h  union_find_set.h
include/gcj/: no_cheating.h  stock_charts.h
include/graph/: lowest_common_ancestor.h  strongly_connected_component.h  tree.h
include/hiho/: exchange_largest_number.h  max_multiply.h  min_shop_distance_google.h  min_shopping_distance.h  old_number.h  ordered_travel.h  quad_tree.h  rectangle_circle_distance.h  reverse_parentheses.h  smallest_delete_number_time.h  username.h
include/mid_level/: aggressive_cows.h  array.h  asteroids.h  binary_indexed_tree.h  binary_partite_matching.h  blocks.h  bubble_swap_times.h  cable_master.h  dancing_links.h  dinic.h  dining.h  dual_core_cpu.h  face_the_right_way.h  farm_tour.h  fast_fibonacci.h  fliptile.h  ford_fulkerson.h  four_sum_zero.h  jack_straws.h  matrix.h  matrix_power_series.h  max_average.h  min_cost_flow.h  orthogonal_latin_squares.h  point.h  reading_problem.h  segment_tree.h  sqrt.h  sum_s_lesat_subsequence.h  the_windys.h  traveller_problem.h
include/new_coder/: matrix_min_distance.h
include/now_coder/: matrix_min_distance.h  max_happy_value.h
include/win_game/: euclid's_game.h  grundy_nim.h  nim.h  staircase_nim.h  take_coin_n_ai_last_win.h
src/: bellman_ford.cpp  bianry_color_graph.cpp  conscription.cpp  crazy_rows.cpp  dijkstra.cpp  expedition.cpp  fast_pow.cpp  hello_world.cpp  longest_common_subsequence.cpp  longest_increasing_subsequence.cpp  minimum_scalar_product.cpp  parentheses_balance.cpp  prime.cpp  sieve.cpp  tmp.cpp
src/advanced/: color_stone.cpp  gauss_jordan.cpp  inclusion_exclusion_principle.cpp  k-anonymous_sequence.cpp  largest_rectangle_in_histogram.cpp  linear_congruence.cpp  moebius.cpp  slice_min.cpp
src/baidu/: lcm_gcd.cpp
src/base/: array_test.cpp  bellman_ford.cpp  bianry_color_graph.cpp  bribe_prisoners.cpp  conscription.cpp  crazy_rows.cpp  dijkstra.cpp  expedition.cpp  fast_pow.cpp  floyd_warshall.cpp  gcd.cpp  hello_world.cpp  kruskal.cpp  longest_common_subsequence.cpp  longest_increasing_subsequence.cpp  minimum_scalar_product.cpp  parentheses_balance.cpp  prime.cpp  sieve.cpp
src/gcj/: no_cheating.cpp  stock_charts.cpp
src/graph/: lowest_common_ancestor.cpp  strongly_connected_component.cpp
src/hiho/: cut_message.cpp  exchange_largest_number.cpp  max_multiply.cpp  min_shop_distance_google.cpp  min_shopping_distance.cpp  old_number.cpp  ordered_travel.cpp  quad_tree.cpp  rectangle_circle_distance.cpp  reverse_parentheses.cpp  smallest_delete_number_time.cpp  sum_of_lucky_number.cpp  username.cpp
src/leet_code_interesting/: fill_rect.cpp
src/mid_level/: aggressive_cows.cpp  asteroids.cpp  binary_partite_matching.cpp  blocks.cpp  bubble_swap_times.cpp  cable_master.cpp  crack_password.cpp  dancing_links.cpp  dinic.cpp  dining.cpp  dual_core_cpu.cpp  face_the_right_way.cpp  farm_tour.cpp  fast_fibonacci.cpp  fliptile.cpp  ford_fulkerson.cpp  four_sum_zero.cpp  jack_straws.cpp  matrix_power_series.cpp  max_average.cpp  min_cost_flow.cpp  orthogonal_latin_quares.cpp  point.cpp  reading_problem.cpp  segment_tree_test.cpp  sum_s_lesat_subsequence.cpp  the_windys.cpp  traveller_problem.cpp
src/now_coder/: binary_number.cpp  coin_count.cpp  common_ancient.cpp  curve_approaching_algorithm.cpp  insert_number.cpp  matrix_min_distance.cpp  max_happy_value.cpp  max_incress_subsequence.cpp  move_candy.cpp  n_max_multiply.cpp  n_queen.cpp  n_queen_faster.cpp  nearest_small_number_index.cpp  paper_game.cpp  perfect_card_mix.cpp  print_matrix.cpp  rect_cover.cpp  sequence_mix.cpp  sub_number.cpp  tree_edge_nodes.cpp  tree_find_swap_node.cpp  up3.cpp
src/win_game/: euclid's_game.cpp  grundy_nim.cpp  nim.cpp  staircase_nim.cpp  take_coin_n_ai_last_win.cpp
