cmake_minimum_required(VERSION 3.9)
project(algorithms)

set(CMAKE_CXX_STANDARD 11)
include_directories(include)

add_executable(matrix_power_series src/mid_level/matrix_power_series.cpp include/mid_level/matrix_power_series.h)
add_executable(blocks src/mid_level/blocks.cpp include/mid_level/blocks.h)
add_executable(fast_fibonacci src/mid_level/fast_fibonacci.cpp include/mid_level/fast_fibonacci.h include/mid_level/matrix.h)
add_executable(face_the_right_way src/mid_level/face_the_right_way.cpp include/mid_level/face_the_right_way.h)
add_executable(aggressive_cows src/mid_level/aggressive_cows.cpp include/mid_level/aggressive_cows.h)
add_executable(bellman_ford src/base/bellman_ford.cpp include/base/bellman_ford.h include/base/map_edge.h)
add_executable(binary_color_graph src/base/bianry_color_graph.cpp include/base/binaty_color_graph.h)
add_executable(bribe_prisoners src/base/bribe_prisoners.cpp include/base/bribe_prisoners.h)
add_executable(cable_master src/mid_level/cable_master.cpp include/mid_level/cable_master.h)
add_executable(conscription src/base/conscription.cpp include/base/conscription.h)
add_executable(crazy_rows src/base/crazy_rows.cpp include/base/crazy_rows.h)
add_executable(dijkstra src/base/dijkstra.cpp include/base/dijkstra.h)
add_executable(expedition src/base/expedition.cpp include/base/expedition.h)
add_executable(fast_pow src/base/fast_pow.cpp include/base/fast_pow.h)
add_executable(floyd_warshall src/base/floyd_warshall.cpp include/base/floyd_warshall.h)
add_executable(hello_world src/base/hello_world.cpp)
add_executable(kruskal src/base/kruskal.cpp include/base/kruskal.h include/base/union_find_set.h)
add_executable(longest_common_subsequence src/base/longest_common_subsequence.cpp include/base/longest_common_subsequence.h)
add_executable(longest_increasing_subsequence src/base/longest_increasing_subsequence.cpp include/base/longest_increasing_subsequence.h)
add_executable(max_average src/mid_level/max_average.cpp include/mid_level/max_average.h)
add_executable(minimum_scalar_product src/base/minimum_scalar_product.cpp include/base/minimum_scalar_product.h)
add_executable(parentheses_balance src/base/parentheses_balance.cpp include/base/parentheses_balance.h)
add_executable(prime src/base/prime.cpp include/base/prime.h include/base/gcd.h)
add_executable(reading_problem src/mid_level/reading_problem.cpp include/mid_level/reading_problem.h)
add_executable(sieve src/base/sieve.cpp include/base/sieve.h)
add_executable(sum_s_lesat_subsequence src/mid_level/sum_s_lesat_subsequence.cpp include/mid_level/sum_s_lesat_subsequence.h)
add_executable(fliptile src/mid_level/fliptile.cpp include/mid_level/fliptile.h)
add_executable(four_sum_zero src/mid_level/four_sum_zero.cpp include/mid_level/four_sum_zero.h)
add_executable(bubble_swap_time src/mid_level/bubble_swap_times.cpp include/mid_level/bubble_swap_times.h include/mid_level/binary_indexed_tree.h include/mid_level/segment_tree.h)